# test_LLM

./: .env.example  .gitignore  README.md  docker-compose-full.yaml  docker-compose.yaml  first-start.sh  load_to_elasticsearch.py  main.py  pyproject.toml  requirements.txt  testmain.py
data/certs/: .gitignore
data/testsets/: .gitignore
evaluate/: metrics.py  similarity.py
package/: CLI.py  __init__.py  config.py  elastic.py  evaluator.py  loader.py  ollama_detector.py
rag/: __init__.py  embeddings.py  prompts.py  retriever.py
test_llm/: __init__.py
test_llm/evaluate/: __init__.py  questions.py  similarity.py
test_llm/package/: CLI.py  elastic.py  evaluator.py  loader.py  ollama_detector.py
test_llm/rag/: embeddings.py  hyde.py  ollama_client.py  retriever.py
